# borsh-schema-utils

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
borsh-schema-writer/: Cargo.toml  README.md
borsh-schema-writer/src/: lib.rs  schema_writer.rs
borsh-schema-writer/tests/: integration_tests.rs
borsh-schema-writer/tests/schema/: person_schema.json
borsh-serde-adapter/: Cargo.toml  README.md
borsh-serde-adapter/src/: borsh_schema_util.rs  deserialize_adapter.rs  errors.rs  lib.rs  serialize_adapter.rs
borsh-serde-adapter/tests/: integration_tests.rs
borsh-serde-adapter/tests/schema/: all_types_schema.json
