[package]
name = "borsh-schema-writer"
version = "1.0.1"
edition = "2021"
authors = ["Will Kennedy"]
description = "Write a BorshSchemaContainer to a binary file"
repository = "https://github.com/wkennedy/borsh-schema-utils"
license = "MIT"
readme = "README.md"
keywords = ["borsh", "serialization", "schema"]
categories = ["parsing"]
exclude=["/tests", "/examples", "/benches", "/docs", "/target", "/.github", "/.gitignore", "/.gitattributes", "/.gitmodules", "/.travis.yml", "/.cargo-ok", "/.git", "/.idea"]

[dependencies]
borsh = { version = "1.4.0", features = ["std", "unstable__schema"] }
borsh-derive = "1.4.0"

[lib]
doctest = false