[package]
name = "borsh-serde-adapter"
version = "1.0.2"
edition = "2021"
authors = ["Will Kennedy"]
description = "Adapter to go from borsh to serde and vice versa"
license = "MIT"
repository = "https://github.com/wkennedy/borsh-schema-utils"
readme = "README.md"
keywords = ["serde", "borsh", "serialization", "json"]
categories = ["parsing"]
exclude=["/tests", "/examples", "/benches", "/docs", "/target", "/.github", "/.gitignore", "/.gitattributes", "/.gitmodules", "/.travis.yml", "/.cargo-ok", "/.git", "/.idea"]

[dependencies]
log = "0.4.21"
serde = { version = "1.0.190", features = ["derive"] }
serde_derive = "1.0.197"
serde_json = "1.0.115"
anyhow = "1.0.81"
simdutf8 = { version = "0.1.4", optional = true }
borsh = { version = "1.4.0", features = ["unstable__schema", "std"] }
borsh-derive = "1.4.0"
thiserror = "1.0.58"

[lib]
doctest = false