[package]
name = "borsh-serde-adapter"
version = "1.0.2"
edition = "2021"
authors = ["Will Kennedy"]
description = "Adapter to go from borsh to serde and vice versa"
license = "MIT"
repository = "https://github.com/wkennedy/borsh-schema-utils"
readme = "README.md"
keywords = ["serde", "borsh", "serialization", "json"]
categories = ["parsing"]
exclude=["/tests", "/examples", "/benches", "/docs", "/target", "/.github", "/.gitignore", "/.gitattributes", "/.gitmodules", "/.travis.yml", "/.cargo-ok", "/.git", "/.idea"]

[dependencies]
log = "0.4.22"
serde = { version = "1.0.205", features = ["derive"] }
serde_derive = "1.0.205"
serde_json = "1.0.122"
anyhow = "1.0.86"
simdutf8 = { version = "0.1.4", optional = true }
borsh = { version = "1.5.1", features = ["unstable__schema", "std"] }
borsh-derive = "1.5.1"
thiserror = "1.0.63"
wasm-bindgen = "0.2.92"

[lib]
doctest = false